# email-remote-access

./: .gitignore  README.md  app.py  cli.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/: client.py  server.py
src/client/: app.py  app_process_client.py  client.py  directory_tree_client.py  live_screen_client.py  mac_address_client.py  registry_client.py  shutdown_logout_client.py
src/clientApp/: app.py  app_process_client.py  keylogger_client.py  registry_client.py  routes.py  shutdown_logout_client.py
src/clientApp/pages/: connect.py
src/clientApp/pages/index/: index.py  list_dir.py  list_process.py  live_screen.py  reg_editor.py
src/legacy/clientApp/: app.py
src/mail/: app.py
src/mail/pages/: base.py  connect.py  index.py  oauth.py
src/mail/pages/index/: index.py
src/mailApp/: app.py  routes.py
src/mailApp/pages/: connect.py  oauth.py
src/mailApp/pages/index/: index.py
src/mailServer/: server.py
src/newClientApp/: app.py  routes.py
src/newClientApp/pages/: connect.py
src/newClientApp/pages/index/: index.py  list_dir.py  list_process.py  live_screen.py  reg_editor.py
src/server/: app.py  app_process_server.py  directory_tree_server.py  live_screen_server.py  mac_address_server.py  mailServer.py  registry_server.py  server.py  shutdown_logout_server.py  sys_info_server.py
src/serverApp/: app.py
src/serverApp/pages/: index.py
src/shared/mail_processing/: __init__.py  app_process.py  directory_tree.py  index.py  live_screen.py  mac_address.py  registry.py  shutdown_logout.py  sys_info.py  utils.py
src/shared/pages/: base.py  confirm.py
src/utils/: mail.py
