[tool.poetry]
name = "email-remote-access"
version = "0.0.0"
description = "Control remote computers using email"
authors = ["Duong Vinh <tienvinh.duong4@gmail.com>"]

[tool.poe.tasks]
dev = "python cli.py"
lint = "flake8"
"sort_import" = "isort ."
pretty = "black ."
test = "echo You are running test command"
deploy = "echo You are running deploy command"
"demo" = "python demo.py"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[tool.poetry.dependencies]
python = "^3.9"
environs = "^9.5.0"
pillow = "^9.5.0"
psutil = "^5.9.4"
typer = "^0.7.0"
python-socketio = {extras = ["client"], version = "^5.8.0"}
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
seedir = {extras = ["emoji"], version = "^0.4.2"}
dearpygui = "^1.9.0"
google-api-python-client = "^2.85.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.18.1"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
pre-commit = "^3.0.4"
poetry-pre-commit-plugin = "^0.1.2"
types-tabulate = "^0.9.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
